--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,15 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>3.1.0.RELEASE</version>
-        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-client -->
         <dependency>
             <groupId>com.sun.jersey</groupId>
